# sample-project-api

./: .env.sample  README.md  docker-compose.yml  pyproject.toml
books/: admin.py  constants.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_alter_genre_name.py  0003_author_id_number_alter_book_owner_and_more.py
config/: settings.py  urls.py
school_blog/: admin.py  apps.py  constants.py  models.py  serializers.py
school_blog/migrations/: 0001_initial.py  0002_rename_type_user_user_type.py
