[tool.poetry]
name = "sample-project-api"
version = "0.1.0"
description = "Simple app for presentation purposes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sample_project_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
dj-database-url = "^1.3.0"
dj-rest-auth = "^3.0.0"
django-allauth = "^0.54.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.1"
psycopg2 = "^2.9.6"
pillow = "^9.5.0"
django-debug-toolbar = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
isort = "^5.12.0"
django-stubs = "^1.16.0"
djangorestframework-stubs = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"